--- a/main_app/templates/main_app/admin/admin_dashboard.html
+++ b/main_app/templates/main_app/admin/admin_dashboard.html
@@ -42,14 +42,14 @@ Dashboard
         <!-- small box -->
         <div class="small-box bg-warning">
           <div class="inner">
-            <h3>44</h3>
+            <h3>{{countDepartments}}</h3>
 
-            <p>Appointments</p>
+            <p>Departments</p>
           </div>
           <div class="icon">
             <i class="ion ion-stats-bars"></i>
           </div>
-          <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+          <a href="{% url 'view_departments' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
         </div>
       </div>
       <!-- ./col -->
