--- a/main_app/templates/main_app/students/lectures.html
+++ b/main_app/templates/main_app/students/lectures.html
@@ -18,6 +18,7 @@ Staffs
               <table class="table table-bordered table-hover" id="example2">
                 <thead>
                   <tr>
+                    <th></th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Block/Office Number</th>
@@ -28,6 +29,7 @@ Staffs
                 <tbody>
                 {% for staff in staffs %}
                   <tr>
+                    <td><img src={{ staff.admin.profile_pic.url }} style="width:200px"></td>
                     <td>{{ staff.admin.first_name }}</td>
                     <td>{{ staff.admin.last_name }}</td>
                     <td>{{ staff.office.block.block_name }}/{{ staff.office.office_number }}</td>
