--- a/main_app/templates/main_app/students/student_profile.html
+++ b/main_app/templates/main_app/students/student_profile.html
@@ -32,7 +32,8 @@ Edit Profile
               <div class="card-body">
                 <div class="form-group">
                   <label>Profile Pic</label>
-                  <input type="file" class="form-control" name="profile_pic">
+                  <input type="file" class="form-control" name="profile_pic" id="file-input">
+                  <p id="file-result"></p>
                 </div>
                 <div class="form-group">
                   <label>Username</label>
@@ -59,7 +60,7 @@ Edit Profile
               <!-- /.card-body -->
 
               <div class="card-footer">
-                <button type="submit" class="btn btn-primary btn-block">Update Profile</button>
+                <button type="submit" id="file-submit" class="btn btn-primary btn-block">Update Profile</button>
               </div>
             </form>
           </div>
@@ -73,3 +74,23 @@ Edit Profile
   </section>
   <!-- /.content -->
 {% endblock main_content %}
+{% block custom_js %}
+<script>
+  let fileInput = document.getElementById("file-input");
+  let fileResult = document.getElementById("file-result");
+  let fileSubmit = document.getElementById("file-submit");
+  fileInput.addEventListener("change", function () {
+    if (fileInput.files.length > 0) {
+      const fileSize = fileInput.files.item(0).size;
+      const fileMb = fileSize / 1024;
+      if (fileMb > 150) {
+        fileResult.innerHTML = "Please select a file less than 100kb.";
+        fileSubmit.disabled = true;
+      } else {
+        fileResult.innerHTML = "Success, your file is " + fileMb.toFixed(1) + "MB.";
+        fileSubmit.disabled = false;
+      }
+    }
+  });
+</script>
+{% endblock custom_js %}
