--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -12,11 +12,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          {% if user.profile_pic %}
-          <img src="{{ user.profile_pic.url }}" class="img-circle elevation-2" alt="User Image">
-          {% else %}
-          <img src="" class="img-circle elevation-2" alt="User Image">
-          {% endif %}
+          <img src="{% static "dist/img/AdminLTELogo.png" %}" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="{% url 'admin_profile' %}" class="d-block">{{ user.username }}</a>
