--- a/main_app/templates/main_app/welcome.html
+++ b/main_app/templates/main_app/welcome.html
@@ -50,11 +50,11 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12">
 					<marquee direction="left" style="padding:20px 0;">
-                        <span style="font-weight: bolder; font-size: 25px; color: #801419">
-                            LOGIN NOW !&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span style="font-weight: bolder; font-size: 25px; color: green">
+                            Consultation Management System !&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                             
                         </span>
-                        </marquee>
+                    </marquee>
 				</div>
 			</div>
 		</section>		
